brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_double_quoted_arithmetic_expression.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r#\"x\"$((1+2))\"y\"#)?"
---
TokenizerResult(
  input: "x\"$((1+2))\"y",
  result: [
    Word("x\"$((1+2))\"y", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 12,
        line: 1,
        column: 13,
      ),
    )),
  ],
)
