brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_double_quoted_command_substitution.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r#\"x\"$(echo hi)\"y\"#)?"
---
TokenizerResult(
  input: "x\"$(echo hi)\"y",
  result: [
    Word("x\"$(echo hi)\"y", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 14,
        line: 1,
        column: 15,
      ),
    )),
  ],
)
