brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_escaped_whitespace.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"1\\ 2 3\")?"
---
TokenizerResult(
  input: "1\\ 2 3",
  result: [
    Word("1\\ 2", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("3", SourceSpan(
      start: SourcePosition(
        offset: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        offset: 6,
        line: 1,
        column: 7,
      ),
    )),
  ],
)
