brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_here_doc-3.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"cat <<HERE\nSOMETHING\nHERE\n\n\")?"
---
TokenizerResult(
  input: "cat <<HERE\nSOMETHING\nHERE\n\n",
  result: [
    Word("cat", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 3,
        line: 1,
        column: 4,
      ),
    )),
    Operator("<<", SourceSpan(
      start: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        offset: 6,
        line: 1,
        column: 7,
      ),
    )),
    Word("HERE", SourceSpan(
      start: SourcePosition(
        offset: 6,
        line: 1,
        column: 7,
      ),
      end: SourcePosition(
        offset: 10,
        line: 1,
        column: 11,
      ),
    )),
    Word("SOMETHING\n", SourceSpan(
      start: SourcePosition(
        offset: 11,
        line: 2,
        column: 1,
      ),
      end: SourcePosition(
        offset: 26,
        line: 4,
        column: 1,
      ),
    )),
    Word("HERE", SourceSpan(
      start: SourcePosition(
        offset: 26,
        line: 4,
        column: 1,
      ),
      end: SourcePosition(
        offset: 26,
        line: 4,
        column: 1,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        offset: 10,
        line: 1,
        column: 11,
      ),
      end: SourcePosition(
        offset: 11,
        line: 2,
        column: 1,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        offset: 26,
        line: 4,
        column: 1,
      ),
      end: SourcePosition(
        offset: 27,
        line: 5,
        column: 1,
      ),
    )),
  ],
)
