brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_here_doc_with_other_tokens.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"cat <<EOF | wc -l\nA B C\n1 2 3\nD E F\nEOF\n\")?"
---
TokenizerResult(
  input: "cat <<EOF | wc -l\nA B C\n1 2 3\nD E F\nEOF\n",
  result: [
    Word("cat", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 3,
        line: 1,
        column: 4,
      ),
    )),
    Operator("<<", SourceSpan(
      start: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        offset: 6,
        line: 1,
        column: 7,
      ),
    )),
    Word("EOF", SourceSpan(
      start: SourcePosition(
        offset: 6,
        line: 1,
        column: 7,
      ),
      end: SourcePosition(
        offset: 9,
        line: 1,
        column: 10,
      ),
    )),
    Word("A B C\n1 2 3\nD E F\n", SourceSpan(
      start: SourcePosition(
        offset: 18,
        line: 2,
        column: 1,
      ),
      end: SourcePosition(
        offset: 40,
        line: 6,
        column: 1,
      ),
    )),
    Word("EOF", SourceSpan(
      start: SourcePosition(
        offset: 40,
        line: 6,
        column: 1,
      ),
      end: SourcePosition(
        offset: 40,
        line: 6,
        column: 1,
      ),
    )),
    Operator("|", SourceSpan(
      start: SourcePosition(
        offset: 9,
        line: 1,
        column: 10,
      ),
      end: SourcePosition(
        offset: 11,
        line: 1,
        column: 12,
      ),
    )),
    Word("wc", SourceSpan(
      start: SourcePosition(
        offset: 12,
        line: 1,
        column: 13,
      ),
      end: SourcePosition(
        offset: 14,
        line: 1,
        column: 15,
      ),
    )),
    Word("-l", SourceSpan(
      start: SourcePosition(
        offset: 14,
        line: 1,
        column: 15,
      ),
      end: SourcePosition(
        offset: 17,
        line: 1,
        column: 18,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        offset: 17,
        line: 1,
        column: 18,
      ),
      end: SourcePosition(
        offset: 18,
        line: 2,
        column: 1,
      ),
    )),
  ],
)
