brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_line_continuation.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"a\\\nbc\")?"
---
TokenizerResult(
  input: "a\\\nbc",
  result: [
    Word("abc", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 5,
        line: 2,
        column: 3,
      ),
    )),
  ],
)
